# kaizen

./: README.md  docker-compose.yaml
course-notes-service/: main.py
transcript-service/: pyproject.toml
web/: .prettierignore  .prettierrc  drizzle.config.ts  package.json  pnpm-lock.yaml
web/.drizzle/: 0001_tiny_randall_flagg.sql
web/.drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
web/scripts/: seed.ts
web/src/app/: globals.css
web/src/app/(landing)/: layout.tsx
web/src/components/: app-sidebar.tsx  connect-with-google-button.tsx  github-star-card.tsx  icons.tsx  landing-page.tsx  theme-switcher.tsx
web/src/components/ui/: card.tsx  sheet.tsx  sidebar.tsx  switch.tsx  toggle.tsx
web/src/db/: index.ts  schema.ts
web/src/lib/: auth-actions.ts  auth-client.ts  auth.ts
