[project]
name = "transcript-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[librabbitmq]>=5.4.0",
    "fastapi>=0.115.4",
    "openai>=1.54.3",
    "pika>=1.3.2",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.0",
    "youtube-transcript-api>=0.6.2",
]
